# ccrag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark.py
src/ccrag/: chunker.py  cli.py  embedder.py  indexer.py  server.py  store.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_embedder.py  test_indexer.py  test_server.py  test_store.py
