[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccrag"
version = "0.1.0"
description = "RAG pipeline for Claude Code — indexes your codebase and exposes it as an MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Trishant Pahwa", email = "labs@wtvision.in" }]
keywords = ["rag", "claude", "claude-code", "mcp", "code-search", "embeddings", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "lancedb>=0.6",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "pyarrow>=14.0",
    "gitignore-parser>=0.1",
    "pandas>=2.0",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=0.3",
]
watch = ["watchdog>=3.0"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/trishantpahwa/ccrag"
Repository = "https://github.com/trishantpahwa/ccrag"
Issues = "https://github.com/trishantpahwa/ccrag/issues"

[project.scripts]
ccrag = "ccrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
